--- a/package.json
+++ b/package.json
@@ -8,8 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^3.0.0-3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14",
+    "vee-validate": "^4.3.0",
+    "vue": "^2.6.12",
+    "vue-router": "^3.5.1",
+    "vue-search-select": "^2.9.3",
+    "vue-select": "^3.11.2",
+    "vue-sweetalert2": "^4.3.1",
+    "vuelidate": "^0.7.6",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
